WT.log
/home/pi/WlanThermoInitialstate.cfg
/home/pi/WlanThermoInitialstate.cfg
/home/pi/WlanThermoInitialstate.cfg
/home/pi/WlanThermoInitialstate.cfg
  File "/home/pi/WlanThermoInitialstate.py", line 3
    <
    ^
SyntaxError: invalid syntax
  File "/home/pi/WlanThermoInitialstate.py", line 3
    <
    ^
SyntaxError: invalid syntax
  File "/home/pi/WlanThermoInitialstate.py", line 3
    <
    ^
SyntaxError: invalid syntax
/home/pi/WlanThermoInitialstate.cfg
/home/pi/WlanThermoInitialstate.cfg
File not exists!
/home/pi/WlanThermoInitialstate.cfg
/home/pi/WlanThermoInitialstate.cfg
/home/pi/WlanThermoInitialstate.cfg
/root
